--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- I put some comments here!!!!!!!!!!! -->
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
             <div class="large-12 cell">
@@ -67,7 +68,7 @@
         </div>
 
     </div>
-
+    <!-- Modals -->
     <div class="reveal" id="alertModal" data-reveal data-animation-in="fade-in" data-animation-out="fade-out" >
         <h1 style="text-align: center; color: aliceblue;" id="alertText"></h1>
         <div class="grid-x grid-padding-x">
@@ -85,6 +86,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    <!-- End of Modals -->
 
 
 </body>
