fixinggggg AJAX request

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="large-4 medium-4 cell">
                     <label>How far you looking?</label>
-                    <input type="number" min="1" max="50" id="milesRadius" placeholder="in miles" />
+                    <input type="number" min="1" max="50" id="milesRadius" value="5" placeholder="in miles" />
                 </div>
             </div>
 
