--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                     <div class="callout">
                         <h5>So many possibilities!</h5>
                         <p>Here got to be list of restaurants</p>
+                        <div class="grid-container">
+                            <div class="grid-x grid-margin-x small-up-2 medium-up-3" id="restaurantList">
+                            
+                            <!-- restaurant Cards will be displayed here -->
+                                
+                            </div>
+                        </div>
                     </div>
                 </div>
             </li>
