--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWU6q_Qi4dTCv_y7fFwe3GTfd7pN0bMYE&libraries=places"></script>
     <script src="js/app.js" defer></script>;
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="js/vendor/jquery.js"></script>
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-
+        
         <ul class="accordion" data-accordion data-multi-expand="true">
             <li class="accordion-item is-active" data-accordion-item>
                 <a href="#" class="accordion-title">Request form</a>
