--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 </figure>
                             </div>
                             <div class="large-6 medium-6 cell">
-                                <figure id="VideosTab">
+                                <figure id="videosTab">
 
 
                                     <p>Here got to be list of receipies</p>
@@ -324,7 +324,7 @@
         </button>
     </div>
     <!-- End of Modals -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+   
 </body>
 
 </html>
