open accordion on submit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </li>
             <li class="accordion-item" id="accordion2" data-accordion-item>
                 <a href="#" class="accordion-title">Restaurant search results</a>
-                <div class="accordion-content" data-tab-content>
+                <div class="accordion-content" id="testing1" data-tab-content>
                     <div class="callout">
                         <div class="title">
                            <h2 id="accord2">List of restaurants based on your cuisine preference </h2>
