--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 </div>
                             </div>
                         </form>
-                        <div class="grid-x grid-padding-x">
+                        <div class="grid-x grid-padding-x" id="recipeListHeader">
                             <div class="large-6 medium-6 cell"
                                 style="background: linear-gradient(#6fe664, #9198e5); color: white; margin:0">
                                 <h3 class="headersstyle">List of receipies </h3>
