buttons for restaurant websites

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="large-4 medium-4 cell">
-                                <label>How far you looking?</label>
+                                <label>How far you looking? (Miles)</label>
                                 <input type="number" min="1" max="50" id="milesRadius" value="5" required
                                     pattern="number" placeholder="in miles" />
                             </div>
