--- a/index.html
+++ b/index.html
@@ -224,40 +224,29 @@
                                 </div>
                             </div>
                         </form>
-                        <div class="grid-x grid-padding-x" id="recipeListHeader">
-                            <div class="large-6 medium-6 cell"
-                                style="background: linear-gradient(#6fe664, #9198e5); color: white; margin:0">
+                    </div>
+                    <div class="grid-x grid-padding-x">
+                        <div class="large-6 medium-6 cell" style= "padding-right: 0; padding-left:0">
+                            <div style="background: linear-gradient(#6fe664, #9198e5); color: white; width:100%;">
                                 <h3 class="headersstyle">List of receipies </h3>
                             </div>
-                            <div class="large-6 medium-6 cell"
-                                style="background: linear-gradient(#6fe664, #9198e5); color:white; margin:0">
+                            <figure id="ReceipiesTab">
+
+
+
+                            </figure>
+                        </div>
+                        <div class="large-6 medium-6 cell" style= "padding-right: 0; padding-left:0">
+                            <div
+                                style="background: linear-gradient(#6fe664, #9198e5); color:white; width:100%; margin:0; padding:0">
                                 <h3 class="headersstyle"> how-to videos list</h3>
                             </div>
+                            <figure id="videosTab">
+
+
+
+                            </figure>
                         </div>
-                    </div>
-                    <div class="callout">
-                        <div class="grid-x grid-padding-x">
-                            <div class="large-6 medium-6 cell">
-                                <figure id="ReceipiesTab">
-                                    <h5>Make it on your own at home!</h5>
-
-
-
-                                </figure>
-                            </div>
-                            <div class="large-6 medium-6 cell">
-                                <figure id="videosTab">
-
-
-                                    <p>Here got to be list of receipies</p>
-
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- <div id="rateYo"></div> -->
-
-
                     </div>
                 </div>
             </li>
