Added clear form button

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                                 <div class="large-4 medium-4 cell">
                                     <label>Let me see what I can find for you</label>
                                     <button class="button" type="Submit">Submit </button>
+                                    <button class="button" id="clear2" >Clear</button>
                                 </div>
                             </div>
                             <input type="checkbox" id="secretpan" name="check1">
