change allert layout and clear the code from testers console.log

--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
 
     <!-- Modals -->
     <div class="reveal" id="alertModal" data-reveal data-animation-in="fade-in" data-animation-out="fade-out">
-        <h2 style="text-align: center; " id="alertText"></h2>
+        <p class="lead" style="text-align: center;">Hmmm. I do not get it.</p>
         <div class="grid-x grid-padding-x">
             <div class="large-7 medium-7 cell">
-
-                <p class="lead">Hmmm. I do not get it.</p>
+                <h5 style="text-align: center; " id="alertText"></h5>
+                
 
             </div>
             <div class="large-5 medium-5 cell">
