hide spoonacular api key

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWU6q_Qi4dTCv_y7fFwe3GTfd7pN0bMYE&libraries=places"></script>
-    <script src="js/app.js" defer></script>;
+    <script src="js/app.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="js/vendor/jquery.js"></script>
+    <script src="./js/keys.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/vendor/foundation.min.js"></script>
