--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>What's For Dinner?</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="shortcut icon" href="assets/icon-192x192.png" type="image/x-icon">
+    <link rel="manifest" href="assets/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWU6q_Qi4dTCv_y7fFwe3GTfd7pN0bMYE&libraries=places"></script>
